<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NextTask</string>
    
    <string name="set_voice_recognition_language">Set voice recognition language</string>
    <string name="set_language">Set language</string>
    <string name="prioritized">Prioritized</string>
    <string name="created">Created</string>
    <string name="completed">Completed</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="due_date">Due date</string>
    <string name="include_subitems">Include subitems</string>
    <string name="settings">Settings</string>
    <string name="add_new_folder">Add new folder</string>
    <string name="add">Add</string>
    <string name="add_new">Add new</string>
    <string name="select_type">Select type</string>
    <string name="cancel">Cancel</string>
    <string name="task">task</string>
    <string name="note">note</string>
    <string name="folder">folder</string>
    <string name="Task">Task</string>
    <string name="Note">Note</string>
    <string name="Folder">Folder</string>
    <string name="set_time_for_weekly_reminder">Set time for weekly reminder</string>
    <string name="add_to_menu">Add to menu</string>
    <string name="you_cannot_move_tasks_and_notes_to_the_menu">You cannot move tasks and notes to the menu</string>
    <string name="current">current</string>
    <string name="one_hour">1 hour</string>
    <string name="one_week">1 week</string>
    <string name="one_month">1 month</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="set_due_date">Set due date</string>
    <string name="set_reminder">Set reminder</string>
    <string name="empty">Empty</string>
    <string name="group_selected_items_in_new_folder">Group selected items in new folder</string>
    <string name="name_the_new_folder">Name the new folder</string>
    <string name="move_selected_items">Move selected items</string>
    <string name="select_a_folder_to_move_to">Select a folder to move to</string>
    <string name="move">Move</string>
    <string name="edit">Edit</string>
    <string name="press_me_to_speak">Press me to speak</string>
    <string name="overdue">Overdue</string>
    <string name="no_name">No name</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="tap_to_write_a_description">Tap to write a description</string>
    <string name="remove_due_date">Remove due date</string>
    <string name="remove_reminder">Remove reminder</string>
    <string name="set_custom_reminder">Set custom reminder</string>
    <string name="set_monthly_reminder">Set monthly reminder</string>
    <string name="sorry_did_not_catch_that">Sorry, didn\'t catch that</string>
    <string name="send_feedback">Send feedback</string>
    
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="and">and</string>
    <string name="now">now</string>
    <string name="in">in</string>
    
    <string name="nothing">Nothing</string>
    <string name="description">Description</string>
    <string name="tap_to_set_a_due_date">Tap to set a due date</string>
    <string name="reminders">Reminders</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="sort_items_by">Sort items by</string>
    <string name="time_mode">Time mode</string>
    <string name="mail_optional">Mail (optional)</string>
    <string name="message">Message</string>
    <string name="thank_you_for_your_feedback">Thank you for your feedback</string>
    <string name="oops_something_went_wrong">Oops! Something went wrong</string>
    <string name="send">Send</string>
    
    
    
    
    <string name="end_of_demo">Sorry, the demo period has ended. But your adventure has not ended quite yet! Download the full version at Google Play to continue listing your tasks and ideas.</string>
    
    <!-- Don't forget to translate DateTimePickerLibrary strings as well -->
</resources>