<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="146dp"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/descET"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:visibility="gone" >
        </EditText>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:visibility="gone" />

        <TextView
            android:id="@+id/descTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tap_to_write_a_description" />

        <EditText
            android:id="@+id/focusDummy"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:visibility="gone" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/dueButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_due_date" />

                <Button
                    android:id="@+id/clearDue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/remove_due_date" />

                <Button
                    android:id="@+id/reminderButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_custom_reminder" />

                <Button
                    android:id="@+id/clearReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_reminder" />

                <ListView
                    android:id="@+id/customReminderList"
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:divider="#888888"
                    android:dividerHeight="2px" >
                </ListView>

                <LinearLayout
                    android:id="@+id/relativeToDueContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>

                <EditText
                    android:id="@+id/dayOfMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="number" />

                <Button
                    android:id="@+id/monthlyReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/set_monthly_reminder" />

                <LinearLayout
                    android:id="@+id/daysOfWeekContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <LinearLayout
                    android:id="@+id/intervalType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>